Fix dropdown align

--- a/src/app/_home.scss
+++ b/src/app/_home.scss
@@ -194,7 +194,7 @@ a {
   }
 
   .wrap-dd-menu .dropdown {
-    left: initial;
+    left: auto;
     &:after {
       right: 20px;
     }
